<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NoteZone</string>
    <string name="my_notes">My Notes</string>
    <string name="create_note">Press the create button to make a new note.</string>
    <string name="create_new_folder">Tap the create button to make a new folder.</string>
    <string name="back">Back</string>

    <!--Drawer Stuff-->s
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!--Dialog Strings-->
    <string name="dialog_new_folder">New Folder</string>
    <string name="dialog_new_note">New Note</string>
    <string name="dialog_done">Done</string>
    <string name="dialog_cancel">Cancel</string>

    <!--Action Names-->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_upload">Upload</string>
    <string name="action_share">Share</string>
    <string name="action_directory_edit">Edit</string>
    <string name="action_directory_copy">Copy</string>
    <string name="action_directory_delete">Delete</string>

    <!--Test Array-->
    <string-array name="array_test" >
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
        <item>Pluto</item>
    </string-array>
</resources>
